force-app/main/default/objects/Sales_Org__c/Sales_Org__c.object-meta.xml
<CustomObject>
    <label>Sales Org</label>
    <nameField>
        <label>Sales Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Org</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>