force-app/main/default/objects/Sales_Org__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <externalId>true</externalId>
    <label>Company Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>