force-app/main/default/objects/Sales_Org__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <externalId>true</externalId>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>