force-app/main/default/objects/Sales_Org__c/fields/Multi_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Multi_Company_Code__c</fullName>
    <externalId>true</externalId>
    <label>Multi Company Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>