force-app/main/default/objects/Sales_Org__c/fields/Multi_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Multi_Country_Code__c</fullName>
    <externalId>true</externalId>
    <label>Multi Country Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>