force-app/main/default/objects/Sales_Org__c/fields/Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Code__c</fullName>
    <externalId>true</externalId>
    <label>Sales Org Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>